Traveling Salesman problem solver class initial funcs

--- a/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj
+++ b/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Genome.h" />
+    <ClInclude Include="TravelingSalesmanProblem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
