--- a/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj.filters
+++ b/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Genome.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TravelingSalesmanProblem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
