Generate adj matrix func, can generate 3 types - random, circular, clustered

--- a/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj.filters
+++ b/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TravelingSalesmanProblem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TSPUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
