--- a/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj
+++ b/TravelingSalesmanProblem_GeneticAlgorithm/TravelingSalesmanProblem_GeneticAlgorithm.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Genome.h" />
     <ClInclude Include="TravelingSalesmanProblem.h" />
+    <ClInclude Include="TSPUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
